--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
-    "react-scroll": "^1.9.3"
+    "react-scroll": "^1.9.3",
+    "scroll": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
