--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "react": "^18.3.1",
