--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,20 +1,9 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "src/server.js",
-            "use": "@vercel/node",
-            "config": {
-                "includeFiles": [
-                    "dist/**"
-                ]
-            }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "src/server.js"
-        }
-    ]
+    "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/server.js"
+    }
+  ]
 }
