--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,15 @@
 {
-    "version": 2,
-    "rewrites": [
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/server.js"
     }
-  ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "server.js"
-        }
-    ]
+  ]
 }
