Update vercel.json 3

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -11,5 +11,11 @@
       "source": "/(.*)",
       "destination": "/server.js"
     }
-  ]
+  ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "server.js"
+        }
+    ]
 }
