--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@studio-freight/lenis": "^1.0.42",
+    "axios": "^1.12.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "react": "^18.3.1",
